[gd_scene load_steps=9 format=3 uid="uid://bpbwoie5phapk"]

[ext_resource type="Script" path="res://Scripts/pantalla_final.gd" id="1_dxg50"]
[ext_resource type="FontFile" uid="uid://bc5s0wm3q2h8r" path="res://Fonts/casino_2/Casino.ttf" id="2_gc7mu"]
[ext_resource type="FontFile" uid="uid://hmb7ytknt5q6" path="res://Fonts/gumela/Gumela.ttf" id="3_tj8q6"]
[ext_resource type="FontFile" uid="uid://bfhmwbnxfndh4" path="res://Fonts/casino_2/CasinoFlat.ttf" id="4_85pn4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mja3g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8rb5"]
bg_color = Color(0.823529, 0, 0.568627, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2pw8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omnlu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="pantallaFinal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxg50")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -293.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 65
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gc7mu")
theme_override_font_sizes/font_size = 76
text = "YOUR SCORE:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tj8q6")
theme_override_font_sizes/font_size = 76
text = "<puntos>"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 559.0
offset_bottom = -50.47
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 185
alignment = 1

[node name="menu" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 0.588235)
theme_override_fonts/font = ExtResource("4_85pn4")
theme_override_font_sizes/font_size = 91
theme_override_styles/focus = SubResource("StyleBoxFlat_mja3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_u8rb5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g2pw8")
theme_override_styles/normal = SubResource("StyleBoxFlat_omnlu")
text = "menu"

[node name="next" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 0.588235)
theme_override_fonts/font = ExtResource("4_85pn4")
theme_override_font_sizes/font_size = 91
theme_override_styles/focus = SubResource("StyleBoxFlat_mja3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_u8rb5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g2pw8")
theme_override_styles/normal = SubResource("StyleBoxFlat_omnlu")
text = "next round"

[connection signal="pressed" from="HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/next" to="." method="_on_next_pressed"]
